INTEGRATION OF FRONTEND WITH BACKEND