@@ -70,7 +70,7 @@ class ClassificationServiceTest {
         request.setDecision(Classification.UserResponse.YES);
         request.setResponseTimeMs(1500L);
 
-        taskInfo = new TaskProvider.TaskInfo(1L, "Question", "Lion", Collections.emptyList());
+        taskInfo = new TaskProvider.TaskInfo(1L, "Question", "Lion", Collections.emptyList(), Collections.emptyList());
 
         image = new Image();
         image.setId(1L);
@@ -163,7 +163,7 @@ class ClassificationServiceTest {
 
     @Test
     void submitClassification_ShouldFallbackToTargetSpeciesNames_WhenQuerySpeciesIsEmpty() {
-        TaskProvider.TaskInfo emptyQueryTaskInfo = new TaskProvider.TaskInfo(1L, "Question", "", List.of("Tiger", "Bear"));
+        TaskProvider.TaskInfo emptyQueryTaskInfo = new TaskProvider.TaskInfo(1L, "Question", "", List.of("Tiger", "Bear"), Collections.emptyList());
         
         when(imageRepository.findById(1L)).thenReturn(Optional.of(image));
         when(goldImageEvaluatorService.evaluate(any(), any(), any(), any())).thenReturn(Optional.empty());
